--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,18 @@
 version: "3.7"
 
 services:
+  app:
+    build:
+      context: .
+    environment:
+      - PGUSER=postgres
+      - PGHOST=db
+      - PGPASSWORD=insecure_password
+      - PGPORT=5432
+    ports:
+      - 80:3000
+    depends_on:
+      - db
   db:
     image: postgres:12
     volumes:
