--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "server.js",
   "scripts": {
     "dev": "nodemon server.js",
+    "build": "mkdir -p build/src && cp -R src server.js build && javascript-obfuscator src/static --output build/src/static --self-defending true",
+    "start": "node build/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -24,5 +26,8 @@
     "nodemon": "^2.0.6",
     "pg": "^8.4.2",
     "serve-static": "^1.14.1"
+  },
+  "devDependencies": {
+    "javascript-obfuscator": "^2.6.4"
   }
 }
