--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "dev": "nodemon server.js",
     "build": "mkdir -p build/src && cp -R src server.js build && javascript-obfuscator src/static --output build/src/static --self-defending true",
     "start": "node build/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "fe-serve": "vue-cli-service serve",
+    "fe-build": "vue-cli-service build",
+    "fe-lint": "vue-cli-service lint"
   },
   "repository": {
     "type": "git",
@@ -21,13 +24,41 @@
   "homepage": "https://github.com/CS3103-AY2021S1-G12/very_insecure_app#readme",
   "dependencies": {
     "cookie-parser": "^1.4.5",
+    "core-js": "^3.6.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jquery": "^3.5.1",
     "nodemon": "^2.0.6",
     "pg": "^8.4.2",
-    "serve-static": "^1.14.1"
+    "serve-static": "^1.14.1",
+    "vue": "^2.6.11"
   },
   "devDependencies": {
-    "javascript-obfuscator": "^2.6.4"
-  }
+    "@vue/cli-plugin-babel": "^4.3.0",
+    "@vue/cli-plugin-eslint": "^4.3.0",
+    "@vue/cli-service": "^4.3.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^6.2.2",
+    "javascript-obfuscator": "^2.6.4",
+    "vue-template-compiler": "^2.6.11"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/essential"
+    ],
+    "parserOptions": {
+      "parser": "babel-eslint"
+    },
+    "rules": {}
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead"
+  ]
 }
